@@ -1,3 +1,8 @@
+2009-07-15  Gautier Portet <kassoulet gmail com>
+
+	* src/soundconverter.py: Follow symbolic links. Wow, how can something this
+	  important can be missing for years ? :)
+	  
 2009-07-02  Gautier Portet <kassoulet gmail com>
 
 	* src/soundconverter.py: Force vbr-max-bitrate to 320 when using mp3+vbr, since
